# Academic-app

./: README.md
Project/academic-app/: README.md  pyproject.toml  requirements.txt
Project/academic-app/src/: app.py  main.py
Project/academic-app/src/models/: __init__.py  dosen.py  mahasiswa.py  matakuliah.py  user.py
Project/academic-app/src/templates/: index.html
Project/academic-app/tests/: test_models.py
